fixed dark mode on mobile, added moon/sun svg

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -112,9 +112,9 @@ html {
 }
 html[data-theme="dark"] { @include dark-appearance; }
 
-@media (prefers-color-scheme: dark) {
-  html { @include dark-appearance; }
-}
+//@media (prefers-color-scheme: dark) {
+//  html { --bg: #000000; }
+//}
   
 // -------------------------------------------- //
 
@@ -168,6 +168,20 @@ html.transition *:after {
 .theme-toggle:focus {
   outline: none;
 }
+
+@keyframes rotate_360 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.theme-toggle {
+  animation: rotate_360 10s linear infinite;
+}
+
 .dashed {
   border-top: 1px var(--text) dashed;
   margin: 0.5em 0;
